--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/grayscale.min.css" rel="stylesheet">
+  <link href="css/skills.css" rel="stylesheet">
 
 </head>
 
@@ -40,10 +41,10 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="#about">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+            <a class="nav-link js-scroll-trigger" href="#aboutme">About Me</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
@@ -61,58 +62,154 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">Braden Shipley</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">Web Developer in Dallas-Ft. Worth</h2>
-        <a href="#about" class="btn btn-primary js-scroll-trigger">About Me</a>
+        <h2 class="text-white-50 mx-auto mt-2 mb-5">Full stack web developer</h2>
+        <a href="#aboutme" class="btn btn-primary js-scroll-trigger">About Me</a>
       </div>
     </div>
   </header>
 
   <!-- About Section -->
-  <section id="about" class="about-section text-center">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-          <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right
-            now, simply download the template on
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open
-            source, and you can use it for any purpose, personal or commercial.</p>
+  <section id="about" class="about-section text-center" style="text-align: center; padding-bottom: 15vh">
+    <div class="contain">
+      <div class="row" style="min-height: 63vh">
+        <div class="col-lg-8" style="margin-left: 0; width: 100vw;">
+          <h2 class="text-white mb-4">Technologies & Skills</h2>
+          <div class="contain" style="margin-top: 5vh">
+            <div class="Skills">
+              <div class="Skill">
+                <p class="Skill__title" style="color: white; margin-bottom: 0">React</p>
+                <a class="Skill__link" href="https://reactjs.org" target="_blank">
+                  <img class="Skill__img" src="./img/react.svg" alt="React">
+                </a>
+              </div>
+              <div class="Skill">
+                <p class="Skill__title" style="color: white; margin-bottom: 0">Redux</p>
+                <a class="Skill__link" href="https://redux.js.org" target="_blank">
+                  <img class="Skill__img" src="./img/redux.svg" alt="Redux">
+                </a>
+              </div>
+              <div class="Skill">
+                <p class="Skill__title" style="color: white; margin-bottom: 0">ES6+</p>
+                <a class="Skill__link" href="https://es6.io" target="_blank">
+                  <img class="Skill__img" src="./img/javascript.svg" alt="ES6+">
+                </a>
+              </div>
+              <div class="Skill">
+                <p class="Skill__title" style="color: white; margin-bottom: 0">Express</p>
+                <a class="Skill__link" href="https://expressjs.com" target="_blank">
+                  <img class="Skill__img" src="./img/express.svg" alt="Express">
+                </a>
+              </div>
+              <div class="Skill">
+                <p class="Skill__title" style="color: white; margin-bottom: 0">Sass</p>
+                <a class="Skill__link" href="https://sass-lang.com/" target="_blank">
+                  <img class="Skill__img4" src="./img/sass.png" alt="Sass icon">
+                </a>
+              </div>
+              <div class="Skill">
+                <p class="Skill__title" style="color: white; margin-bottom: 0">Git + GitHub</p>
+                <a class="Skill__link" href="https://git-scm.com" target="_blank">
+                  <img class="Skill__img" src="./img/git.svg" alt="Git + GitHub">
+                </a>
+              </div>
+              <div class="Skill">
+                <p class="Skill__title" style="color: white; margin-bottom: 0">PostgreSQL</p>
+                <a class="Skill__link" href="https://www.postgresql.org" target="_blank">
+                  <img class="Skill__img" src="./img/postgres.svg" alt="PostgreSQL">
+                </a>
+              </div>
+              <div class="Skill">
+                <p class="Skill__title" style="color: white; margin-bottom: 0">Node.js</p>
+                <a class="Skill__link" href="https://nodejs.org/en" target="_blank">
+                  <img class="Skill__img" src="./img/node.svg" alt="Node.js">
+                </a>
+              </div>
+              <div class="Skill">
+                <p class="Skill__title" style="color: white; margin-bottom: 0">NPM</p>
+                <a class="Skill__link" href="https://www.npmjs.com" target="_blank">
+                  <img class="Skill__img" src="./img/npm.svg" alt="NPM">
+                </a>
+              </div>
+              <div class="Skill">
+                <p class="Skill__title" style="color: white; margin-bottom: 0">CSS3</p>
+                <a class="Skill__link" href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS3" target="_blank">
+                  <img class="Skill__img" src="./img/css3.svg" alt="CSS3">
+                </a>
+              </div>
+              <div class="Skill">
+                <p class="Skill__title" style="color: white; margin-bottom: 0">HTML5</p>
+                <a class="Skill__link" href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5"
+                  target="_blank">
+                  <img class="Skill__img" src="./img/html5.svg" alt="HTML5">
+                </a>
+              </div>
+              <!-- <div class="Skill">
+                <p class="Skill__title" style="color: white; margin-bottom: 0">MATERIAL-UI</p>
+                <a class="Skill__link" href="https://material-ui.com/" target="_blank">
+                  <img class="Skill_img" height=200 width=200 src="./img/material-ui.svg" alt="MATERIAL-UI">
+                </a>
+              </div> -->
+            </div>
+          </div>
         </div>
       </div>
-      <img src="img/ipad.png" class="img-fluid" alt="">
+    </div>
+  </section>
+
+  <!-- About Me Section -->
+  <section id="aboutme" class="projects-section bg-light" style="padding-top: 5vh; padding-bottom: 5vh">
+    <div class="container">
+      <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+        <div class="col-xl-8 col-lg-7" style="max-width: 50%">
+          <img class="img-fluid mb-3 mb-lg-0" src="img/jeremyscott.jpg" alt="">
+        </div>
+        <div class="col-xl-4 col-lg-5" style="min-width: 27vw">
+          <div class="featured-text text-center text-lg-left">
+            <h4>About Me</h4>
+            <p class="text-black-50 mb-0">In my career, I have experienced a variety of different industries
+              that didn't quite click with me. However, once I got into development, I found a profession that finally
+              clicked.
+              I am excited to be apart of the process of building web applications. It has really opened up a creative
+              side of me that has been rewarding and exciting.
+              <a class="nav-link js-scroll-trigger" href="#about" style="display: inline; padding: 0; margin: 0"></a>
+              <br /><br />
+              <p>
+                <a href="resume.pdf" download>
+                  Download Resume
+                  <i class="icon-download4"></i>
+                </a>
+              </p>
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
   <!-- Projects Section -->
-  <section id="projects" class="projects-section bg-light">
+  <section id="projects" class="projects-section bg-light" style="padding-top: 5vh; padding-bottom: 5vh;">
     <div class="container">
-
-      <!-- Featured Project Row -->
-      <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-        <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.jpg" alt="">
-        </div>
-        <div class="col-xl-4 col-lg-5">
-          <div class="featured-text text-center text-lg-left">
-            <h4>Shoreline</h4>
-            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any
-              project - even commercial projects! Download it, customize it, and publish your website!</p>
-          </div>
-        </div>
-      </div>
-
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-        <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+        <div class="col-lg-6" style="background: rgb(19, 18, 18)">
+          <div style="position:relative;height:0;padding-bottom:56.25%"><iframe
+              src="https://www.youtube.com/embed/-O66X7dWvHg" frameborder="0" allow="autoplay; encrypted-media"
+              style='position:absolute;width:100%;height:100%;left:0' allowfullscreen></iframe></div>
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Misty</h4>
-                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else,
-                  along with a description.</p>
+                <h4 class="text-white">Sugarboy Donuts</h4>
+                <p class="mb-0 text-white-50">A demonstrative e-commerce site created with a local donut shop in mind
+                  that I like to frequent. It has
+                  a customer facing side that allows for donut purchases, as well as an admin side that allows for
+                  product changes,
+                  additions, deletions, as well as a chart of the most popular donut type purchased.
+                  <br /><br />View GitHub Repo <a href="https://github.com/jeremylscott/sugarboy_personal_project"
+                    target="_blank">here</a>
+                  <br /><br />View live site <a href="http://www.lekkerdonuts.com" target="_blank">here</a>
+                </p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -123,15 +220,20 @@
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
+          <img class="img-fluid" src="./img/views.png" alt="">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Mountains</h4>
-                <p class="mb-0 text-white-50">Another example of a project with its respective description. These
-                  sections work well responsively as well, try this theme on a small screen!</p>
+                <h4 class="text-white">First Night Out</h4>
+                <p class="mb-0 text-white-50">This group project was built to help people that are new to
+                  an area, find a nice day of activities based on information from other users.
+                  <br /><br />View GitHub repository <a href="https://github.com/firstnightout/first-night-out"
+                    target="_blank">here</a>
+                  <br /><br />View live site <a href="http://www.firstnightout.fun" target="_blank">here</a> (* intended
+                  for mobile use only)
+                </p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -143,27 +245,20 @@
   </section>
 
   <!-- Signup Section -->
-  <section id="signup" class="signup-section">
+  <section id="signup" class="signup-section" style="padding: 0; padding-top: 15vh;">
     <div class="container">
       <div class="row">
         <div class="col-md-10 col-lg-8 mx-auto text-center">
 
           <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-          <h2 class="text-white mb-5">I am currently looking for work. </h2>
-
-          <!-- <form class="form-inline d-flex">
-            <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail"
-              placeholder="Enter email address...">
-            <button type="submit" class="btn btn-primary mx-auto">Subscribe</button>
-          </form> -->
-
+          <h2 class="text-white mb-5">Let's connect!</h2>
         </div>
       </div>
     </div>
   </section>
 
   <!-- Contact Section -->
-  <section class="contact-section bg-black">
+  <section class="contact-section bg-black" style="padding-bottom: 2vh;">
     <div class="container">
 
       <div class="row">
@@ -172,9 +267,9 @@
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Address</h4>
+              <h4 class="text-uppercase m-0">Location</h4>
               <hr class="my-4">
-              <div class="small text-black-50">2313 Green Oaks St, Denton TX</div>
+              <div class="small text-black-50">Dallas/Fort Worth, Texas</div>
             </div>
           </div>
         </div>
@@ -186,7 +281,7 @@
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="#">bradenrshipley@gmail.com</a>
+                <a href="mailto:jeremylscott@gmail.com">jeremylscott@gmail.com</a>
               </div>
             </div>
           </div>
@@ -198,20 +293,17 @@
               <i class="fas fa-mobile-alt text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Phone</h4>
               <hr class="my-4">
-              <div class="small text-black-50">+1 (469) 693-8196</div>
+              <div class="small text-black-50">(469) 688-4284</div>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="social d-flex justify-content-center">
-        <!-- <a href="https://twitter.com/bradenshipley" class="mx-2">
-          <i class="fab fa-twitter"></i>
-        </a> -->
-        <a href="https://www.instagram.com/bradenrshipley" class="mx-2">
-          <i class="fab fa-instagram"></i>
+      <div class="social d-flex justify-content-center" style="margin-top: 15vh">
+        <a href="https://www.linkedin.com/in/jeremyleescott" target="_blank" class="mx-2">
+          <i class="fab fa-linkedin"></i>
         </a>
-        <a href="https://github.com/bradenshipley" class="mx-2">
+        <a href="https://github.com/jeremylscott" target="_blank" class="mx-2">
           <i class="fab fa-github"></i>
         </a>
       </div>
@@ -220,9 +312,9 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-black small text-center text-white-50">
-    <div class="container">
-      Copyright &copy; Braden Shipley 2019
+  <footer class="bg-black small text-center text-white-50" style="padding-top: 0; height: 10vh">
+    <div class="container" style="padding-bottom: 5vh">
+      Copyright &copy; Jeremy L. Scott 2019
     </div>
   </footer>
 
@@ -230,12 +322,15 @@
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+
   <!-- Plugin JavaScript -->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for this template -->
   <script src="js/grayscale.min.js"></script>
 
+
 </body>
+
 
 </html>
