--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
   <header class="masthead" style="background-image:url(./img/landing.jpeg)">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
-        <h1 class="mx-auto my-0 text-uppercase">Braden Shipley</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">Full stack web developer</h2>
+        <h1 class="mx-auto my-0 text-uppercase" id="masthead_title">Braden Shipley</h1>
+        <h2 class=" mx-auto mt-2 mb-5">Full stack web developer</h2>
         <a href="#aboutme" class="btn btn-primary js-scroll-trigger">About Me</a>
       </div>
     </div>
@@ -236,7 +236,8 @@
                   application built in React to interact with the Magic API. Users can sort and browse cards by color,
                   name, and rarity, and then add them to their own deck and rename them.
                   <br /><br />
-                  View GitHub Repo <a href="https://github.com/firstnightout/first-night-out" target="_blank">here</a>
+                  View GitHub Repo <a href="https://github.com/bradenshipley/MagicTheDeckBuilder"
+                    target="_blank">here</a>
                 </p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
@@ -249,10 +250,11 @@
   </section>
 
   <!-- Signup Section -->
-  <section id="signup" class="signup-section" style="padding: 0; padding-top: 15vh;">
+  <section id="signup" class="signup-section"
+    style="padding: 0; padding-top: 15vh;background:linear-gradient(to bottom,rgb(10, 10, 10) 0,rgb(22, 22, 22) 75%,#161616 100%),url(../img/bg-signup.jpg);">
     <div class="container">
       <div class="row">
-        <div class="col-md-10 col-lg-8 mx-auto text-center">
+        <div class=" col-lg-8 mx-auto text-center">
 
           <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
           <h2 class="text-white mb-5">Let's connect!</h2>
@@ -285,7 +287,7 @@
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="mailto:jeremylscott@gmail.com">bradenrshipley@gmail.com</a>
+                <a href="mailto:bradenrshipley@gmail.com">bradenrshipley@gmail.com</a>
               </div>
             </div>
           </div>
