added third project

--- a/index.html
+++ b/index.html
@@ -245,8 +245,31 @@
           </div>
         </div>
       </div>
-
+<!-- Project 3 Row -->
+<div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+  <div class="col-lg-6" style="background: rgb(19, 18, 18)">
+    <div style="position:relative;height:0;padding-bottom:56.25%"><iframe width="560" height="315" src="https://www.youtube.com/embed/B5NUT5Hejf0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
+  </div>
+  <div class="col-lg-6">
+    <div class="bg-black text-center h-100 project">
+      <div class="d-flex h-100">
+        <div class="project-text w-100 my-auto text-center text-lg-left">
+          <h4 class="text-white">Ordeer</h4>
+          <p class="mb-0 text-white-50">A Full Stack Restaurant Ordering Application. This project was built in React with React Hooks, Material-UI, and Firebase
+            <br /><br />View GitHub Repo <a href="https://github.com/restaurant-ordering/Ordeer" target="_blank">here</a>
+            <br /><br />View live site <a href="http://www.ordeer.net" target="_blank">here</a>
+          </p>
+          <hr class="d-none d-lg-block mb-0 ml-0">
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+    </div>
+
+
+
   </section>
 
   <!-- Signup Section -->
