--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase" id="masthead_title">Braden Shipley</h1>
-        <h2 class=" mx-auto mt-2 mb-5">Full stack web developer</h2>
+        <h2 class=" mx-auto mt-2 mb-5">Senior Full Stack Web Developer</h2>
         <a href="#aboutme" class="btn btn-primary js-scroll-trigger">About Me</a>
       </div>
     </div>
@@ -172,7 +172,7 @@
         <div class="col-xl-4 col-lg-5" style="min-width: 27vw">
           <div class="featured-text text-center text-lg-left">
             <h4>About Me</h4>
-            <p class="text-black-50 mb-0">I am a Web Developer in Denton, TX. After serving for six years in the Texas
+            <p class="text-black-50 mb-0">I am a Web Developer in Aubrey, TX. After serving for six years in the Texas
               Army National Guard as an Infantry NCO, I transitioned into software development. I'm passionate about
               learning new technologies, spending time with my wife, son, three dogs, and weight lifting.
               <a class="nav-link js-scroll-trigger" href="#about" style="display: inline; padding: 0; margin: 0"></a>
@@ -298,7 +298,7 @@
               <i class="fas fa-map-marked-alt text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Location</h4>
               <hr class="my-4">
-              <div class="small text-black-50">Denton, Texas</div>
+              <div class="small text-black-50">Aubrey, Texas</div>
             </div>
           </div>
         </div>
