--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger" href="#about">Skills</a>
-                        </li>
+                        <!--<li class="nav-item">-->
+                            <!--<a class="nav-link js-scroll-trigger" href="#about">Skills</a>-->
+                        <!--</li>-->
                         <li class="nav-item">
                             <a class="nav-link js-scroll-trigger" href="#aboutme">About Me</a>
                         </li>
@@ -65,100 +65,100 @@
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
                     <h1 class="mx-auto my-0 text-uppercase" id="masthead_title">Braden Shipley</h1>
-                    <h2 class=" mx-auto mt-2 mb-5">Senior Full Stack Web Developer</h2>
+                    <h2 class=" mx-auto mt-2 mb-5">Software Engineer</h2>
                     <a href="#aboutme" class="btn btn-primary js-scroll-trigger">About Me</a>
                 </div>
             </div>
         </header>
 
         <!-- About Section -->
-        <section id="about" class="about-section text-center" style="text-align: center; padding-bottom: 15vh">
-            <div class="contain">
-                <div class="row" style="min-height: 63vh">
-                    <div class="col-lg-8" style="margin-left: 0; width: 100vw;">
-                        <h2 class="text-white mb-4">Technologies & Skills</h2>
-                        <div class="contain" style="margin-top: 5vh;">
-                            <div class=" Skills">
-                                <div class="Skill">
-                                    <p class="Skill__title" style="color: white; margin-bottom: 0">React</p>
-                                    <a class="Skill__link" href="https://reactjs.org" target="_blank">
-                                        <img class="Skill__img" src="./img/react.svg" alt="React">
-                                    </a>
-                                </div>
-                                <div class="Skill">
-                                    <p class="Skill__title" style="color: white; margin-bottom: 0">Redux</p>
-                                    <a class="Skill__link" href="https://redux.js.org" target="_blank">
-                                        <img class="Skill__img" src="./img/redux.svg" alt="Redux">
-                                    </a>
-                                </div>
-                                <div class="Skill">
-                                    <p class="Skill__title" style="color: white; margin-bottom: 0">ES6+</p>
-                                    <a class="Skill__link" href="https://es6.io" target="_blank">
-                                        <img class="Skill__img" src="./img/javascript.svg" alt="ES6+">
-                                    </a>
-                                </div>
-                                <div class="Skill">
-                                    <p class="Skill__title" style="color: white; margin-bottom: 0">Express</p>
-                                    <a class="Skill__link" href="https://expressjs.com" target="_blank">
-                                        <img class="Skill__img" src="./img/express.svg" alt="Express">
-                                    </a>
-                                </div>
-                                <div class="Skill">
-                                    <p class="Skill__title" style="color: white; margin-bottom: 0">Git + GitHub</p>
-                                    <a class="Skill__link" href="https://git-scm.com" target="_blank">
-                                        <img class="Skill__img" src="./img/git.svg" alt="Git + GitHub">
-                                    </a>
-                                </div>
-                                <div class="Skill">
-                                    <p class="Skill__title" style="color: white; margin-bottom: 0">PostgreSQL</p>
-                                    <a class="Skill__link" href="https://www.postgresql.org" target="_blank">
-                                        <img class="Skill__img" src="./img/postgres.svg" alt="PostgreSQL">
-                                    </a>
-                                </div>
-                                <div class="Skill">
-                                    <p class="Skill__title" style="color: white; margin-bottom: 0">Node.js</p>
-                                    <a class="Skill__link" href="https://nodejs.org/en" target="_blank">
-                                        <img class="Skill__img" src="./img/node.svg" alt="Node.js">
-                                    </a>
-                                </div>
-                                <div class="Skill">
-                                    <p class="Skill__title" style="color: white; margin-bottom: 0">NPM</p>
-                                    <a class="Skill__link" href="https://www.npmjs.com" target="_blank">
-                                        <img class="Skill__img" src="./img/npm.svg" alt="NPM">
-                                    </a>
-                                </div>
-                                <div class="Skill">
-                                    <p class="Skill__title" style="color: white; margin-bottom: 0">CSS3</p>
-                                    <a class="Skill__link" href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS3" target="_blank">
-                                        <img class="Skill__img" src="./img/css3.svg" alt="CSS3">
-                                    </a>
-                                </div>
-                                <div class="Skill">
-                                    <p class="Skill__title" style="color: white; margin-bottom: 0">HTML5</p>
-                                    <a class="Skill__link" href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5"
-                                                           target="_blank">
-                                        <img class="Skill__img" src="./img/html5.svg" alt="HTML5">
-                                    </a>
-                                </div>
-                                <div class="Skill">
-                                    <p class="Skill__title" style="color: white; margin-bottom: 0">MATERIAL-UI</p>
-                                    <a class="Skill__link" href="https://material-ui.com/" target="_blank">
-                                        <img class="Skill_img" height=200 width=170 src="./img/material-ui-logo.svg" alt="MATERIAL-UI">
-                                    </a>
-                                </div>
-                                <div class="Skill">
-                                    <p class="Skill__title" style="color: white; margin-bottom: 0">Sass</p>
-                                    <a class="Skill__link" href="https://sass-lang.com/" target="_blank">
-                                        <img class="Skill__img" src="./img/sass-lang-icon.svg" height=200 width=170 style="margin-left:60px;"
-                                                                                                                    alt="Sass icon">
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+        <!--<section id="about" class="about-section text-center" style="text-align: center; padding-bottom: 15vh">-->
+            <!--<div class="contain">-->
+                <!--<div class="row" style="min-height: 63vh">-->
+                    <!--<div class="col-lg-8" style="margin-left: 0; width: 100vw;">-->
+                        <!--<h2 class="text-white mb-4">Technologies & Skills</h2>-->
+                        <!--<div class="contain" style="margin-top: 5vh;">-->
+                            <!--<div class=" Skills">-->
+                                <!--<div class="Skill">-->
+                                    <!--<p class="Skill__title" style="color: white; margin-bottom: 0">React</p>-->
+                                    <!--<a class="Skill__link" href="https://reactjs.org" target="_blank">-->
+                                        <!--<img class="Skill__img" src="./img/react.svg" alt="React">-->
+                                    <!--</a>-->
+                                <!--</div>-->
+                                <!--<div class="Skill">-->
+                                    <!--<p class="Skill__title" style="color: white; margin-bottom: 0">Redux</p>-->
+                                    <!--<a class="Skill__link" href="https://redux.js.org" target="_blank">-->
+                                        <!--<img class="Skill__img" src="./img/redux.svg" alt="Redux">-->
+                                    <!--</a>-->
+                                <!--</div>-->
+                                <!--<div class="Skill">-->
+                                    <!--<p class="Skill__title" style="color: white; margin-bottom: 0">ES6+</p>-->
+                                    <!--<a class="Skill__link" href="https://es6.io" target="_blank">-->
+                                        <!--<img class="Skill__img" src="./img/javascript.svg" alt="ES6+">-->
+                                    <!--</a>-->
+                                <!--</div>-->
+                                <!--<div class="Skill">-->
+                                    <!--<p class="Skill__title" style="color: white; margin-bottom: 0">Express</p>-->
+                                    <!--<a class="Skill__link" href="https://expressjs.com" target="_blank">-->
+                                        <!--<img class="Skill__img" src="./img/express.svg" alt="Express">-->
+                                    <!--</a>-->
+                                <!--</div>-->
+                                <!--<div class="Skill">-->
+                                    <!--<p class="Skill__title" style="color: white; margin-bottom: 0">Git + GitHub</p>-->
+                                    <!--<a class="Skill__link" href="https://git-scm.com" target="_blank">-->
+                                        <!--<img class="Skill__img" src="./img/git.svg" alt="Git + GitHub">-->
+                                    <!--</a>-->
+                                <!--</div>-->
+                                <!--<div class="Skill">-->
+                                    <!--<p class="Skill__title" style="color: white; margin-bottom: 0">PostgreSQL</p>-->
+                                    <!--<a class="Skill__link" href="https://www.postgresql.org" target="_blank">-->
+                                        <!--<img class="Skill__img" src="./img/postgres.svg" alt="PostgreSQL">-->
+                                    <!--</a>-->
+                                <!--</div>-->
+                                <!--<div class="Skill">-->
+                                    <!--<p class="Skill__title" style="color: white; margin-bottom: 0">Node.js</p>-->
+                                    <!--<a class="Skill__link" href="https://nodejs.org/en" target="_blank">-->
+                                        <!--<img class="Skill__img" src="./img/node.svg" alt="Node.js">-->
+                                    <!--</a>-->
+                                <!--</div>-->
+                                <!--<div class="Skill">-->
+                                    <!--<p class="Skill__title" style="color: white; margin-bottom: 0">NPM</p>-->
+                                    <!--<a class="Skill__link" href="https://www.npmjs.com" target="_blank">-->
+                                        <!--<img class="Skill__img" src="./img/npm.svg" alt="NPM">-->
+                                    <!--</a>-->
+                                <!--</div>-->
+                                <!--<div class="Skill">-->
+                                    <!--<p class="Skill__title" style="color: white; margin-bottom: 0">CSS3</p>-->
+                                    <!--<a class="Skill__link" href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS3" target="_blank">-->
+                                        <!--<img class="Skill__img" src="./img/css3.svg" alt="CSS3">-->
+                                    <!--</a>-->
+                                <!--</div>-->
+                                <!--<div class="Skill">-->
+                                    <!--<p class="Skill__title" style="color: white; margin-bottom: 0">HTML5</p>-->
+                                    <!--<a class="Skill__link" href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5"-->
+                                                           <!--target="_blank">-->
+                                        <!--<img class="Skill__img" src="./img/html5.svg" alt="HTML5">-->
+                                    <!--</a>-->
+                                <!--</div>-->
+                                <!--<div class="Skill">-->
+                                    <!--<p class="Skill__title" style="color: white; margin-bottom: 0">MATERIAL-UI</p>-->
+                                    <!--<a class="Skill__link" href="https://material-ui.com/" target="_blank">-->
+                                        <!--<img class="Skill_img" height=200 width=170 src="./img/material-ui-logo.svg" alt="MATERIAL-UI">-->
+                                    <!--</a>-->
+                                <!--</div>-->
+                                <!--<div class="Skill">-->
+                                    <!--<p class="Skill__title" style="color: white; margin-bottom: 0">Sass</p>-->
+                                    <!--<a class="Skill__link" href="https://sass-lang.com/" target="_blank">-->
+                                        <!--<img class="Skill__img" src="./img/sass-lang-icon.svg" height=200 width=170 style="margin-left:60px;"-->
+                                                                                                                    <!--alt="Sass icon">-->
+                                    <!--</a>-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</section>-->
 
         <!-- About Me Section -->
         <section id="aboutme" class="projects-section bg-light" style="padding-top: 5vh; padding-bottom: 5vh">
@@ -170,9 +170,10 @@
                     <div class="col-xl-4 col-lg-5" style="min-width: 27vw">
                         <div class="featured-text text-center text-lg-left">
                             <h4>About Me</h4>
-                            <p class="text-black-50 mb-0">I am a Web Developer in Aubrey, TX. After serving for six years in the Texas
-                            Army National Guard as an Infantry NCO, I transitioned into software development. I'm passionate about
-                            learning new technologies, spending time with my wife, son, three dogs, and weight lifting.
+                            <p class="text-black-50 mb-0">
+                              I am a software engineer based out of texas. I build scalable software solutions to solve a wide variety of problems, both in private enterprise and for the federal government. I am available for freelance work and am proficient in a variety of languages and frameworks.
+                              <br />
+                              (This portfolio is a work-in-progress)
                             <a class="nav-link js-scroll-trigger" href="#about" style="display: inline; padding: 0; margin: 0"></a>
                             <br /><br />
                             <p>
@@ -296,7 +297,7 @@
                                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Location</h4>
                                 <hr class="my-4">
-                                <div class="small text-black-50">Aubrey, Texas</div>
+                                <div class="small text-black-50">Oak Point, Texas</div>
                             </div>
                         </div>
                     </div>
@@ -341,7 +342,7 @@
         <!-- Footer -->
         <footer class="bg-black small text-center text-white-50" style="padding-top: 0; height: 10vh">
             <div class="container" style="padding-bottom: 5vh">
-                Copyright &copy; Braden Shipley 2019
+                Copyright &copy; Braden Shipley 2020
             </div>
         </footer>
 
