added h1, alts to images, and updated header sizes to decrease as page goes down
Signed-off-by: Braden Shipley <bradenrshipley@gmail.com>

--- a/index.html
+++ b/index.html
@@ -25,20 +25,21 @@
   <body>
     <nav class="nav" style="margin-bottom:5px;">
       <div class="nav-left">
-        <a class="brand text-primary" href="#">Braden Shipley</a>
+        <div class="brand text-primary">Braden Shipley</div>
       </div>
       <div class="nav-right">
         <a class="button primary" style="color: #0f111a;" href="https://medium.com/@bradenreedshipley">Articles</a>
         <a class="button primary" style="color: #0f111a;" href="mailto:bradenrshipley@gmail.com">Contact</a>
       </div>
     </nav>
+        <h1 class="text-primary is-center">My name is Braden and I write software for a living</h1>
     <div class="container">
       <div class="row">
-        <img class="col-6" src="./assets/golfing.jpg"/>
+        <img class="col-6" src="./assets/golfing.jpg" alt="a picture of me golfing!"/>
         <div class="container col-6">
           <div class="card">
             <header class="text-primary is-center">
-              <h4>About Me</h4>
+              <h3>About Me</h3>
             </header>
             <p>I am a software engineer based out of texas. I build scalable software solutions to solve a wide variety of problems, both in private enterprise and for the federal government. I am available for freelance work and am proficient in a variety of languages and frameworks. (This portfolio is a work-in-progress)
             </p>
@@ -50,34 +51,34 @@
           </div>
           <div class="card">
             <header>
-              <h4 class="text-primary is-center">Skillset</h4>
+              <h3 class="text-primary is-center">Skillset</h3>
             </header>
-            <h5>Languages:</h5>
+            <h4>Languages:</h4>
             <div class="container">
-              <i class="devicon-rust-plain colored" style="font-size: 55px"></i>
-              <img src="https://icongr.am/devicon/ruby-plain.svg?size=55&color=f78c6c" />
-              <img src="https://icongr.am/devicon/javascript-plain.svg?size=55&color=f78c6c" />
-              <img src="https://icongr.am/devicon/html5-plain.svg?size=55&color=f78c6c" />
-              <img src="https://icongr.am/devicon/css3-plain.svg?size=55&color=f78c6c" />
+              <i   alt="rust" class="devicon-rust-plain colored" style="font-size: 55px"></i>
+              <img alt="ruby" src="https://icongr.am/devicon/ruby-plain.svg?size=55&color=f78c6c" />
+              <img alt="javascript" src="https://icongr.am/devicon/javascript-plain.svg?size=55&color=f78c6c" />
+              <img alt="html5" src="https://icongr.am/devicon/html5-plain.svg?size=55&color=f78c6c" />
+              <img alt="css3" src="https://icongr.am/devicon/css3-plain.svg?size=55&color=f78c6c" />
             </div>
-            <h5>Frameworks:</h5>
+            <h4>Frameworks:</h4>
             <div class="container">
-              <img src="https://icongr.am/devicon/rails-plain-wordmark.svg?size=55&color=f78c6c" />
-              <img src="https://icongr.am/devicon/postgresql-plain-wordmark.svg?size=55&color=f78c6c" />
-              <img src="https://icongr.am/devicon/redhat-plain-wordmark.svg?size=55&color=f78c6c" />
-              <img src="https://icongr.am/devicon/redis-plain-wordmark.svg?size=55&color=f78c6c" />
+              <img alt="ruby on rails" src="https://icongr.am/devicon/rails-plain-wordmark.svg?size=55&color=f78c6c" />
+              <img alt="postgresql" src="https://icongr.am/devicon/postgresql-plain-wordmark.svg?size=55&color=f78c6c" />
+              <img alt="redhat" src="https://icongr.am/devicon/redhat-plain-wordmark.svg?size=55&color=f78c6c" />
+              <img alt="redis" src="https://icongr.am/devicon/redis-plain-wordmark.svg?size=55&color=f78c6c" />
             </div>
-            <h5>Tools:</h5>
+            <h4>Tools:</h4>
             <div class="container">
-              <img src="https://icongr.am/devicon/vim-plain.svg?size=55&color=f78c6c" />
-              <img src="https://icongr.am/devicon/git-plain.svg?size=55&color=f78c6c" />
+              <img alt="vim" src="https://icongr.am/devicon/vim-plain.svg?size=55&color=f78c6c" />
+              <img alt="git" src="https://icongr.am/devicon/git-plain.svg?size=55&color=f78c6c" />
             </div>
           </div>
         </div>
       </div>
     </div>
     <header class="is-center text-primary">
-      <h4>Projects</h4>
+      <h3>Projects</h3>
     </header>
     <div class="container">
       <div class="row">
