updated medium link
Signed-off-by: Braden Shipley <bradenrshipley@gmail.com>

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="brand text-primary">Braden Shipley</div>
       </div>
       <div class="nav-right">
-        <a class="button primary" style="color: #0f111a;" href="https://medium.com/@bradenreedshipley">Articles</a>
+        <a class="button primary" style="color: #0f111a;" href="https://medium.com/@bradenshipley">Articles</a>
         <a class="button primary" style="color: #0f111a;" href="mailto:bradenrshipley@gmail.com">Contact</a>
       </div>
     </nav>
