--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
             </header>
             <p>I am a software engineer based out of texas. I build scalable software solutions to solve a wide variety of problems, both in private enterprise and for the federal government. I am available for freelance work and am proficient in a variety of languages and frameworks. (This portfolio is a work-in-progress)
             </p>
-            <footer class="is-center">
+            <footer class="is-right">
+              <a href="www.github.com/bradenshipley">
+                Github
+              </a>
+              <div class="text-primary">&nbsp;|&nbsp;</div>
               <a href="./assets/bradenShipleyResume.docx" download>
                 Download Resume
               </a>
