made github href an absolute path
Signed-off-by: Braden Shipley <bradenrshipley@gmail.com>

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <p>I am a software engineer based out of texas. I build scalable software solutions to solve a wide variety of problems, both in private enterprise and for the federal government. I am available for freelance work and am proficient in a variety of languages and frameworks. (This portfolio is a work-in-progress)
             </p>
             <footer class="is-right">
-              <a href="www.github.com/bradenshipley">
+              <a href="https://www.github.com/bradenshipley">
                 Github
               </a>
               <div class="text-primary">&nbsp;|&nbsp;</div>
